Add YARN, letsencrypt certificate for the second node

--- a/roles/hadoop/templates/profile.hadoop.sh.j2
+++ b/roles/hadoop/templates/profile.hadoop.sh.j2
@@ -1,6 +1,10 @@
 export HADOOP_HOME={{ hadoop_link_dir }}
 export PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin
 export HADOOP_CONF_DIR=$HADOOP_HOME/etc/hadoop
+export HADOOP_COMMON_HOME=$HADOOP_HOME
+export HADOOP_HDFS_HOME=$HADOOP_HOME
+export HADOOP_MAPRED_HOME=$HADOOP_HOME
+export HADOOP_YARN_HOME=$HADOOP_HOME
 export HDFS_NAMENODE_USER={{ hadoop_os_user_name }}
 export HDFS_DATANODE_USER={{ hadoop_os_user_name }}
 export HDFS_SECONDARYNAMENODE_USER={{ hadoop_os_user_name }}
