--- a/roles/hadoop/templates/mapred-site.xml.j2
+++ b/roles/hadoop/templates/mapred-site.xml.j2
@@ -21,4 +21,12 @@
     <name>mapreduce.framework.name</name>
     <value>yarn</value>
   </property>
+  <property>
+    <name>mapreduce.map.memory.mb</name>
+    <value>2048</value>
+  </property>
+  <property>
+    <name>mapreduce.reduce.memory.mb</name>
+    <value>2048</value>
+  </property>
 </configuration>
