--- a/roles/nifi/templates/authorizers.xml
+++ b/roles/nifi/templates/authorizers.xml
@@ -49,7 +49,7 @@
         <property name="Users File">./conf/users.xml</property>
         <property name="Legacy Authorized Users File"></property>
 
-        <property name="Initial User Identity 1">{{ nifi_oauth_admin_name }}</property>
+        <property name="Initial User Identity 1">{{ nifi_oauth_admin_name | default('') }}</property>
     </userGroupProvider>
 
     <!--
@@ -244,7 +244,7 @@
         <class>org.apache.nifi.authorization.FileAccessPolicyProvider</class>
         <property name="User Group Provider">file-user-group-provider</property>
         <property name="Authorizations File">./conf/authorizations.xml</property>
-        <property name="Initial Admin Identity">{{ nifi_oauth_admin_name }}</property>
+        <property name="Initial Admin Identity">{{ nifi_oauth_admin_name | default('') }}</property>
         <property name="Legacy Authorized Users File"></property>
 
         <property name="Node Identity 1"></property>
